# bewego

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  run_tests.sh  setup.py
data/: baxter_right_arm.json  freeflyer_2d_s.json  r3_robot.urdf
docs/source/: conf.py  index.rst  modules.rst  pybewego.rst
examples/: baxter_ik_demo.py  demos_common_imports.py  ipopt_freeflyer.py  ipopt_planar.py  ipopt_traj_opt.py  planar_robot_ik.py  planar_robot_jacobian.py  planar_robot_trajopt.py  plot_astar.py  plot_lwr.py  plot_softnorm.py  plot_traj_opt.py  plot_value_iter.py
pybewego/: __init__.py  ipopt_interface.py  kinematic_structures.py  kinematics.py  message_passing.py  motion_optimization.py  pybullet_loader.py  pybullet_world.py  workspace_drawer.py  workspace_viewer_server.py
python/: vred_example.py
source/bewego/: astar.cpp  astar.h  atomic_maps.h  atomic_operators.h  bindings.cpp  chrono.cpp  chrono.h  cost_terms.cpp  cost_terms.h  differentiable_map.cpp  differentiable_map.h  geometry.h  interpolation.cpp  interpolation.h  kinematics.cpp  kinematics.h  objective.cpp  objective.h  planar_grid.cpp  planar_grid.h  rnn.cpp  rnn.h  rotations.cpp  rotations.h  trajectory.cpp  trajectory.h  util.cpp  util.h  value_iteration.cpp  value_iteration.h  value_iteration.hpp  workspace.cpp  workspace.h
source/bewego/derivatives/: atomic_operators.cpp  atomic_operators.h  combination_operators.cpp  combination_operators.h  computational_graph.cpp  computational_graph.h  differentiable_map.cpp  differentiable_map.h
source/bewego/geodesic_flow/: attractors.cpp  attractors.h
source/bewego/motion/: cost_terms.cpp  cost_terms.h  differentiable_kinematics.cpp  differentiable_kinematics.h  forward_kinematics.cpp  forward_kinematics.h  freeflyers.cpp  freeflyers.h  hardcoded_robots.h  kinematics.cpp  objective.cpp  objective.h  publisher.cpp  publisher.h  robot.cpp  robot.h  trajectory.cpp  trajectory.h
source/bewego/numerical_optimization/: bewopt_freeflyer.cpp  bewopt_freeflyer.h  bewopt_planar.cpp  bewopt_planar.h  bewopt_robot.cpp  bewopt_robot.h  constrained_optimization_problem.cpp  constrained_optimization_problem.h  freeflyer_optimization.h  ipopt_optimizer.cpp  ipopt_optimizer.h  ipopt_problem.cpp  ipopt_problem.h  numerical_optimization.cmake  optimization_test_functions.cpp  optimization_test_functions.h  optimizer.cpp  optimizer.h  planar_motion_optimization.cpp  planar_motion_optimization.h  qp_data.h  trajectory_optimization.cpp  trajectory_optimization.h
source/bewego/numerical_optimization/tests/: test_ipopt.cpp  test_planar_motion_optimization.cpp  test_sparse.cpp  test_trajectory_optimization.cpp
source/bewego/planning/: astar.cpp  planar_grid.cpp  planar_grid.h  value_iteration.cpp  value_iteration.h
source/bewego/trajectory_optimization/: cost_terms.cpp  cost_terms.h  objective.cpp  objective.h
source/bewego/util/: bounds.h  chrono.cpp  cubic_interp_matrices.h  cubic_interpolation.cpp  cubic_interpolation.h  eigen.cpp  eigen.h  interpolation.cpp  interpolation.h  misc.cpp  misc.h  multi_variate_gaussian.h  range.cpp  range.h  socket.cpp  socket.h  tricubic_interpolation.cpp  tricubic_interpolation.h  util.cpp  util.h
source/bewego/workspace/: analytical_grid.cpp  analytical_grid.h  collision_checking.cpp  collision_checking.h  extent.h  geometry.cpp  geometry.h  pixelmap.cpp  pixelmap.h  softmax_primitive_workspace.cpp  softmax_primitive_workspace.h  spline_grid.cpp  spline_grid.h  voxel_grid.h  workspace.cpp  workspace.h
tests/: atomic_operators_utest.cpp  conftest.py  cost_terms_utest.cpp  geometry_utest.cpp  ifopt_test.cpp  interpolation_utest.cpp  objective_utest.cpp  rnn_utest.cpp  rotations_utest.cpp  test.py  test_astar.py  test_computational_graph.py  test_freeflyer.py  test_imports.py  test_kinematics.py  test_objective.py  test_optimization.py  test_serialize.py  trajectory_utest.cpp  utests.cmake  workspace_utest.cpp
tests/cpp-unittests/: analytical_grids_2d_utest.cpp  analytical_grids_utest.cpp  atomic_operators_utest.cpp  attractors_utest.cpp  computational_graph_utest.cpp  cost_terms_utest.cpp  differentiable_kinematics_utest.cpp  freeflyers_utest.cpp  geometry_utest.cpp  interpolation_utest.cpp  kinematics_utest.cpp  objective_utest.cpp  pixelmap_utest.cpp  socket_utest.cpp  trajectory_utest.cpp  workspace_utest.cpp
tests/qp_data/: Am.csv  Bm.csv  Hm.csv  av.csv  bv.csv  dv.csv
